Fix: Allow mobile users to click on visibleOnHover elements

--- a/src/global.css
+++ b/src/global.css
@@ -334,11 +334,14 @@ span .danger {
 @media screen and (min-width: 501px) {
 	.mobile {
 		display: none;
-	}	
+	}
 }
 
 @media screen and (max-width: 500px) {
 	.optional {
 		display: none;
+	}
+	.visibleOnParentHover {
+		opacity: 100;
 	}
 }
